fix: improve btn

--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@ exclude-nav: true
             </div>
         </div>
         <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-            <a href="/dm">Parcourir nos prestations de services</a>
-            <span aria-hidden="true" class="fas fa-chevron-right"></span>
+            <a href="/dm">
+                Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
         </button>
     </div>
     <!-- IMAGE FLEUR A DROITE -->
@@ -203,8 +204,9 @@ exclude-nav: true
             </div>
         </div>
         <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center mb-5">
-            <a href="/dm">Parcourir nos prestations de services</a>
-            <span aria-hidden="true" class="fas fa-chevron-right"></span>
+            <a href="/dm">
+                Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
+            </a>
         </button>
     </div>
 </section>
@@ -223,7 +225,7 @@ exclude-nav: true
                 <h2>En savoir plus sur DEVmachine</h2>
                 <p>Co-construction, RSE, locaux, équipe, etc...</p>
                 <button type="button" class="dm-btn dm-btn-orange">
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
+                    <a href=""><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
                 </button>
             </div>
         </div>
