--- a/pages/blog.html
+++ b/pages/blog.html
@@ -39,8 +39,9 @@ order: 5
 
           <div class="btn-container">
             <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-              <a href="{{ post.url }}">Lire la suite</a>
-              <span aria-hidden="true" class="fas fa-chevron-right"></span>
+              <a href="{{ post.url }}">
+                Lire la suite<span aria-hidden="true" class="fas fa-chevron-right"></span>
+              </a>
             </button>
           </div>
         </div>
