--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -84,8 +84,9 @@ order: 3
 
     <div class="row mt-5">
       <button type="button" class="dm-btn dm-btn-orange m-3 ml-auto mr-auto">
-        <a href="">Nos annonces de recrutement</a>
-        <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        <a href="">
+          Nos annonces de recrutement<span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
       </button>
     </div>
   </div>
