--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -52,8 +52,9 @@ order: 6
 
           <div class="btn-container">
             <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-              <a target="_blank" href="#">Lire l'annonce</a>
-              <span aria-hidden="true" class="fas fa-external-link-alt"></span>
+              <a target="_blank" href="#">
+                Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+              </a>
             </button>
           </div>
         </div>
