fix: titles + grey color

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ exclude-nav: true
             <div class="col-md-6 col-sm-12">
                 <div class="intro-bg">
                     <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
-                    <p>
-                        <b>DEVmachine est une Software Factory</b><br/>
-                        Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des petites équipes pluridisciplinaires dédiées.
+                    <p class="text-grey"><b>DEVmachine est une Software Factory</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des petites équipes pluridisciplinaires dédiées.
                     </p>
                 </div>
                 <button type="button" class="dm-btn dm-btn-blue">
@@ -46,7 +44,7 @@ exclude-nav: true
                 </div>
                 <div class="piliers-text">
                     <h3>Engagement</h3>
-                    <p>Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
+                    <p class="text-grey">Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
                 </div>
             </div>
             <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
@@ -55,7 +53,7 @@ exclude-nav: true
                 </div>
                 <div class="piliers-text">
                     <h3>Collaboration</h3>
-                    <p>C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
+                    <p class="text-grey">C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
                 </div>
             </div>
             <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
@@ -64,7 +62,7 @@ exclude-nav: true
                 </div>
                 <div class="piliers-text">
                     <h3>Pragmatisme</h3>
-                    <p>Nous avons l’ambition de faire simple et efficace dans la durée</p>
+                    <p class="text-grey">Nous avons l’ambition de faire simple et efficace dans la durée</p>
                 </div>
             </div>
             <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
@@ -73,7 +71,7 @@ exclude-nav: true
                 </div>
                 <div class="piliers-text">
                     <h3>Confiance</h3>
-                    <p>C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
+                    <p class="text-grey">C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
                 </div>
             </div>
         </div>
