feat: improve responsive

--- a/index.html
+++ b/index.html
@@ -5,227 +5,238 @@ exclude-nav: true
 # front matter tells Jekyll to process Liquid
 ---
 <!-- INTRO -->
-<section id="index-intro">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-12">
-                <div class="intro-bg">
-                    <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
-                    <p class="text-grey"><b>DEVmachine est une Software Factory</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des petites équipes pluridisciplinaires dédiées.
-                    </p>
-                </div>
-                <button type="button" class="dm-btn dm-btn-blue">
-                    <a href="/offre">Parcourir notre offre</a>
-                </button>
-                <button type="button" class="dm-btn dm-btn-white">
-                    <a href="/dm">Découvrir DEVmachine</a>
-                </button>
-            </div>
-            <div class="col-md-6 col-sm-12 shape-container">
-                <div class="image-container">
-                    <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
-                </div>
-                <div class="bg-orange"></div>
-            </div>
+<section id="index-intro" class="intro">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <div class="intro-bg">
+          <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
+          <p class="text-grey"><b>DEVmachine est une Software Factory</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des petites équipes pluridisciplinaires dédiées.
+          </p>
         </div>
+
+        <div class="row btn-container">
+          <button type="button" class="dm-btn dm-btn-blue">
+            <a href="/offre">Parcourir notre offre</a>
+          </button>
+          <button type="button" class="dm-btn dm-btn-white">
+            <a href="/dm">Découvrir DEVmachine</a>
+          </button>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-sm-12 shape-container">
+        <div class="image-container">
+          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+        </div>
+        <div class="bg-orange"></div>
+      </div>
     </div>
+  </div>
 </section>
 
 <!-- PILIERS -->
 <section id="index-piliers">
-    <div class="container">
-        <div class="row d-flex justify-content-center">
-            <h1 class="section-heading">Piliers de notre organisation et<br>des services rendus à nos clients</h1>
-        </div>
-        <div class="col-12 d-flex flex-wrap">
-            <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-                <div>
-                    <img alt="" src="/assets/images/website/piliers/engagement.jpg"/>
-                </div>
-                <div class="piliers-text">
-                    <h3>Engagement</h3>
-                    <p class="text-grey">Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
-                </div>
-            </div>
-            <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-                <div>
-                    <img alt="" src="/assets/images/website/piliers/engagement.jpg"/>
-                </div>
-                <div class="piliers-text">
-                    <h3>Collaboration</h3>
-                    <p class="text-grey">C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
-                </div>
-            </div>
-            <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-                <div>
-                    <img alt="" src="/assets/images/website/piliers/engagement.jpg"/>
-                </div>
-                <div class="piliers-text">
-                    <h3>Pragmatisme</h3>
-                    <p class="text-grey">Nous avons l’ambition de faire simple et efficace dans la durée</p>
-                </div>
-            </div>
-            <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
-                <div>
-                    <img alt="" src="/assets/images/website/piliers/engagement.jpg"/>
-                </div>
-                <div class="piliers-text">
-                    <h3>Confiance</h3>
-                    <p class="text-grey">C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
-                </div>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <h1 class="section-heading">Piliers de notre organisation et<br>des services rendus à nos clients</h1>
     </div>
+    <div class="col-12 d-flex flex-wrap">
+      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
+        <div>
+          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        </div>
+        <div class="piliers-text">
+          <h3>Engagement</h3>
+          <p class="text-grey">Pertinence dans les choix, respect des objectifs, capacité à “leader” les projets</p>
+        </div>
+      </div>
+      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
+        <div>
+          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        </div>
+        <div class="piliers-text">
+          <h3>Collaboration</h3>
+          <p class="text-grey">C’est le coeur de notre approche : nous adorons partager et confronter les points de vue pour en tirer le meilleur</p>
+        </div>
+      </div>
+      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
+        <div>
+          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        </div>
+        <div class="piliers-text">
+          <h3>Pragmatisme</h3>
+          <p class="text-grey">Nous avons l’ambition de faire simple et efficace dans la durée</p>
+        </div>
+      </div>
+      <div class="piliers-item col-lg-6 col-sm-12 d-inline-flex justify-content-around align-items-center">
+        <div>
+          <img alt="" src="/assets/images/website/page-index/piliers/engagement.jpg"/>
+        </div>
+        <div class="piliers-text">
+          <h3>Confiance</h3>
+          <p class="text-grey">C’est la base des relations que nous construisons au sein de l’équipe DEVmachine et avec nos clients</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- IMAGES -->
-<section id="index-images">
-    <div class="shape-container bg-blue"></div>
-    <div class="img-container">
-        <img alt="Equipe DEVmachine" src="/assets/images/website/dm-group.jpg" />
-    </div>
-    <div class="shape-container bg-pink"></div>
+<section id="index-images" aria-hidden="true">
+  <div class="shape-container bg-blue"></div>
+  <div class="img-container">
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img1.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img2.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img3.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img4.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img5.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img6.jpg" /></div>
+  </div>
+  <div class="shape-container bg-pink"></div>
 </section>
 
 <!-- B2B / B2C -->
 <section id="index-b2b">
-    <div class="container">
-        <div class="row">
-            <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
-            <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
-        </div>
-        <div class="col-12 d-flex align-items-center mt-5">
-            <ul class="arrow-list">
-                <li>Définition de solution logicielle / définition de produit</li>
-                <li>UX/UI</li>
-                <li>Architecture</li>
-                <li>Développement logiciel</li>
-                <li>Déploiement</li>
-                <li>Infogérance</li>
-            </ul>
-            <div class="col-4 d-inline-block">
-                <img class="w-50" alt="" src="/assets/images/website/dm-group.jpg"/>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
+      <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
     </div>
+    <div class="row align-items-center mt-5">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <ul class="arrow-list">
+          <li>Définition de solution logicielle / définition de produit</li>
+          <li>UX/UI</li>
+          <li>Architecture</li>
+          <li>Développement logiciel</li>
+          <li>Déploiement</li>
+          <li>Infogérance</li>
+        </ul>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      </div>
+    </div>
+  </div>
 </section>
 
 <div class="container">
-    <hr />
+  <hr />
 </div>
 
 <!-- PRESTATIONS -->
 <section id="index-prestations" class="pb-0">
-    <div class="container">
-        <div class="row">
-            <h1 class="section-heading">Nos prestations</h1>
-            <h2 class="section-subheading">Une réponse pour chacune de vos questions</h2>
-        </div>
-        <div class="questions">
-            <div class="question-item-container">
-                <div class="question-item">
-                    <p>J’ai une idée mais je ne sais pas comment exprimer mon besoin</p>
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
-                </div>
-            </div>
-            <div class="question-item-container">
-                <div class="question-item float-right">
-                    <p>Je souhaite désengorger ma dette technique, challenger ma stack technique</p>
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
-                </div>
-            </div>
-            <div class="question-item-container">
-                <div class="question-item">
-                    <p>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</p>
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
-                </div>
-            </div>
-            <div class="question-item-container">
-                <div class="question-item float-right">
-                    <p>Je souhaite faire développer ou faire évoluer une solution</p>
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
-                </div>
-            </div>
-            <div class="question-item-container">
-                <div class="question-item">
-                    <p>Je souhaite renforcer mon équipe de développement</p>
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
-                </div>
-            </div>
-            <div class="question-item-container">
-                <div class="question-item float-right">
-                    <p>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</p>
-                    <span aria-hidden="true" class="fas fa-chevron-right"></span>
-                </div>
-            </div>
-        </div>
-        <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
-            <a href="/dm">
-                Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-        </button>
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Nos prestations</h1>
+      <h2 class="section-subheading">Une réponse pour chacune de vos questions</h2>
     </div>
-    <!-- IMAGE FLEUR A DROITE -->
-    <div class="img-container">
-        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+    <div class="questions">
+      <div class="question-item-container">
+        <div class="question-item">
+          <p>J’ai une idée mais je ne sais pas comment exprimer mon besoin</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item float-right">
+          <p>Je souhaite désengorger ma dette technique, challenger ma stack technique</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item">
+          <p>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item float-right">
+          <p>Je souhaite faire développer ou faire évoluer une solution</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item">
+          <p>Je souhaite renforcer mon équipe de développement</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </div>
+      </div>
+      <div class="question-item-container">
+        <div class="question-item float-right">
+          <p>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</p>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </div>
+      </div>
     </div>
+    <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center">
+      <a href="/dm">
+        Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
+      </a>
+    </button>
+  </div>
+  <!-- IMAGE FLEUR A DROITE -->
+  <div class="img-container">
+    <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+  </div>
 </section>
 
 <!-- SAVOIR-FAIRE -->
 
 <section id="index-savoir-faire">
-    <div class="container">
-        <div class="row">
-            <h1 class="section-heading">Nos savoir-faire</h1>
-            <h2 class="section-subheading">Compétences et soft skills</h2>
-        </div>
-        <div class="col-12 skill-items">
-            <div class="col-lg-6 col-md-12 skill-item">
-                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
-                <h3>Des compétences</h3>
-                <p>Majoritairement techniques</p>
-            </div>
-            <div class="col-lg-6 col-md-12 skill-item">
-                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
-                <h3>Des outils</h3>
-                <p>Au service de la productivité des équipes</p>
-            </div>
-            <div class="col-lg-6 col-md-12 skill-item">
-                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
-                <h3>Des pratiques agiles</h3>
-                <p>Inspirées de Kanban et de Scrum</p>
-            </div>
-            <div class="col-lg-6 col-md-12 skill-item">
-                <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
-                <h3>Un état d’esprit individuel et collectif</h3>
-                <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
-            </div>
-        </div>
-        <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center mb-5">
-            <a href="/dm">
-                Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
-            </a>
-        </button>
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Nos savoir-faire</h1>
+      <h2 class="section-subheading">Compétences et soft skills</h2>
     </div>
+    <div class="col-12 skill-items">
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/page-index/prestations/bottom-flower.png"/>
+        <h3>Des compétences</h3>
+        <p>Majoritairement techniques</p>
+      </div>
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+        <h3>Des outils</h3>
+        <p>Au service de la productivité des équipes</p>
+      </div>
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+        <h3>Des pratiques agiles</h3>
+        <p>Inspirées de Kanban et de Scrum</p>
+      </div>
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/prestations/bottom-flower.png"/>
+        <h3>Un état d’esprit individuel et collectif</h3>
+        <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
+      </div>
+    </div>
+    <button type="button" class="dm-btn dm-btn-orange d-inline-flex align-items-center mb-5">
+      <a href="/dm">
+        Parcourir nos prestations de services<span aria-hidden="true" class="fas fa-chevron-right"></span>
+      </a>
+    </button>
+  </div>
 </section>
 
 <!-- EN SAVOIR PLUS -->
 <section id="index-savoir-plus">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 text-center">
-                <div class="img-container">
-                    <img class="circle" alt="" src="/assets/images/website/savoir-plus/circle_shape.svg">
-                    <img class="julien" alt="" src="/assets/images/website/savoir-plus/julien-dos.jpg"/>
-                </div>
-            </div>
-            <div class="col-lg-6 text-center">
-                <h2>En savoir plus sur DEVmachine</h2>
-                <p>Co-construction, RSE, locaux, équipe, etc...</p>
-                <button type="button" class="dm-btn dm-btn-orange">
-                    <a href=""><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
-                </button>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 text-center">
+        <div class="img-container">
+          <img class="circle" alt="" src="/assets/images/website/page-index/savoir-plus/circle_shape.svg">
+          <img class="julien" alt="" src="/assets/images/website/page-index/savoir-plus/julien-dos.jpg"/>
         </div>
+      </div>
+      <div class="col-lg-6 text-center">
+        <h2>En savoir plus sur DEVmachine</h2>
+        <p>Co-construction, RSE, locaux, équipe, etc...</p>
+        <button type="button" class="dm-btn dm-btn-orange">
+          <a href=""><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
+        </button>
+      </div>
     </div>
+  </div>
 </section>
