fix: style intro

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ exclude-nav: true
         </div>
       </div>
 
-      <div class="col-md-6 col-sm-12 shape-container">
+      <div class="col-md-6 col-sm-12 shape-container right-img">
         <div class="image-container">
           <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
         </div>
