feat: savoir-faire responsive

--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -11,13 +11,17 @@ order: 2
         <div>
           <h1 class="section-heading">Le savoir-faire DEVmachine</h1>
           <p><b>Nous construisons les projets de nos clients dans une approche qui se veut à la fois qualitative, efficace, technique, et industrialisée.</b></p>
-          <p>Elle repose sur les compétences et qualités individuelles de chacun, et aussi sur la force du collectif DEVmachine.</p>
+          <p class="text-grey">Elle repose sur les compétences et qualités individuelles de chacun, et aussi sur la force du collectif DEVmachine.</p>
         </div>
-        <button type="button" class="dm-btn dm-btn-blue">
-          <a href="/offre">Parcourir notre offre</a>
-        </button>
+
+        <div class="row btn-container">
+          <button type="button" class="dm-btn dm-btn-blue">
+            <a href="/offre">Parcourir notre offre</a>
+          </button>
+        </div>
       </div>
-      <div class="col-md-6 col-sm-12">
+
+      <div class="col-md-6 col-sm-12 right-img">
         <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
       </div>
     </div>
@@ -33,7 +37,7 @@ order: 2
 
     <div class="row col-lg-8 offset-lg-2 col-md-12">
       <h2>Qualité</h2>
-      <p>Nous ne faisons aucun compromis sur la qualité de nos livrables, dans une vision court et moyen terme, pour à la fois satisfaire les utilisateurs, mais aussi permettre à nos clients de pouvoir continuer à investir dans de nouveaux services à leur apporter plutôt que dans de la correction ou de la mise à jour technique des solutions.</p>
+      <p class="text-grey">Nous ne faisons aucun compromis sur la qualité de nos livrables, dans une vision court et moyen terme, pour à la fois satisfaire les utilisateurs, mais aussi permettre à nos clients de pouvoir continuer à investir dans de nouveaux services à leur apporter plutôt que dans de la correction ou de la mise à jour technique des solutions.</p>
       <ul class="arrow-list">
         <li>Nous diffusons continuellement auprès des équipes projet des bonnes pratiques de conception et de développement</li>
         <li>Merge requests</li>
