fix: responsive savoir-faire page

--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -4,7 +4,7 @@ permalink: /savoir-faire/
 title: Savoir-Faire
 order: 2
 ---
-<section id="savoir-faire-intro">
+<section id="savoir-faire-intro" class="intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
