feat: dm page responsive

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -4,25 +4,29 @@ permalink: /dev-machine/
 title: DEVmachine
 order: 3
 ---
-<section id="dm-intro">
+<section id="dm-intro" class="intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">En savoir plus sur DEVmachine</h1>
-          <p>DEVmachine a été créée fin 2018 en partageant une vision commune sur :</p>
-          <ul class="arrow-list">
+          <p class="text-grey">DEVmachine a été créée fin 2018 en partageant une vision commune sur :</p>
+          <ul class="arrow-list text-blue">
             <li>Un positionnement fort en tant qu’acteur du service numérique, que nous retrouvons dans notre offre de services et nos savoir-faire</li>
             <li>La nécessité de s’appuyer sur un collectif</li>
             <li>La nécessité de servir et promouvoir le territoire</li>
             <li>La nécessité de développer une démarche RSE</li>
           </ul>
         </div>
-        <button type="button" class="dm-btn dm-btn-blue m-3">
-          <a href="">Contactez-nous</a>
-        </button>
+
+        <div class="row btn-container">
+          <button type="button" class="dm-btn dm-btn-blue m-3">
+            <a href="">Contactez-nous</a>
+          </button>
+        </div>
       </div>
-      <div class="col-md-6 col-sm-12">
+
+      <div class="col-md-6 col-sm-12 right-img">
         <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
       </div>
     </div>
@@ -37,15 +41,15 @@ order: 3
     </div>
 
     <div class="row">
-      <p class="text-orange ml-auto mr-auto mt-3">3 exemples pour illustrer :</p>
+      <h6 class="text-orange ml-auto mr-auto mt-3">3 exemples pour illustrer :</h6>
     </div>
 
     <div class="row align-items-center dm-item">
-      <div class="col-8">
+      <div class="col-md-8 col-sm-12">
         <h2>La co-construction</h2>
-        <p>Nous enrichissons DEVmachine tous ensemble de façon itérative.</p>
-        <p>Tous les trimestres, nous nous réunissons par petits groupes pour faire avancer DEVmachine dans ses pratiques sur 5 thématiques majeures :</p>
-        <ul class="arrow-list">
+        <p class="text-grey">Nous enrichissons DEVmachine tous ensemble de façon itérative.</p>
+        <p class="text-grey">Tous les trimestres, nous nous réunissons par petits groupes pour faire avancer DEVmachine dans ses pratiques sur 5 thématiques majeures :</p>
+        <ul class="arrow-list text-blue">
           <li>Vie d’agence</li>
           <li>RH/recrutement</li>
           <li>RSE</li>
@@ -53,31 +57,31 @@ order: 3
           <li>Vie extra-professionnelle (dit “Comité des Fêtes”)</li>
         </ul>
       </div>
-      <div class="col-3 offset-1">
+      <div class="col-md-3 offset-md-1 col-sm-12">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
     </div>
 
     <hr />
 
-    <div class="row align-items-center dm-item">
-      <div class="col-3">
+    <div class="row align-items-center dm-item sm-reverse">
+      <div class="col-md-3 col-sm-12">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
-      <div class="col-8 offset-1">
+      <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Le CODOR - COmité D’ORientation</h2>
-        <p class="text-justify">Tous les semestres, le Comité d’Orientation réunit les 3 associés fondateurs et 2 représentants des salariés (auto-designés par l’équipe à chaque session) pour partager sur l’activité globale de DEVmachine, les opportunités de développement de DEVmachine, les actions à prioriser pour améliorer le quotidien et continuer à fédérer l’équipe.</p>
+        <p class="text-grey text-justify">Tous les semestres, le Comité d’Orientation réunit les 3 associés fondateurs et 2 représentants des salariés (auto-designés par l’équipe à chaque session) pour partager sur l’activité globale de DEVmachine, les opportunités de développement de DEVmachine, les actions à prioriser pour améliorer le quotidien et continuer à fédérer l’équipe.</p>
       </div>
     </div>
 
     <hr />
 
     <div class="row align-items-center dm-item">
-      <div class="col-8">
+      <div class="col-md-8 col-sm-12">
         <h2>Le recrutement</h2>
-        <p class="text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin de RV avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
+        <p class="text-grey text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin de RV avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
       </div>
-      <div class="col-3 offset-1">
+      <div class="col-md-3 offset-md-1 col-sm-12">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
     </div>
@@ -100,38 +104,37 @@ order: 3
       <h2 class="section-subheading">DEVmachine s’est créée à Rennes, avec la ferme intention de se développer sur le territoire breton historique, d’accompagner les acteurs économiques et institutionnels bretons, et de faire valoir le savoir-faire des entreprises bretonnes.</h2>
     </div>
 
-    <div class="row align-items-center dm-item">
-      <div class="col-3">
+    <div class="row align-items-center dm-item sm-reverse">
+      <div class="col-md-3 col-sm-12">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
-      <div class="col-8 offset-1">
+      <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Implantés à Rennes et Lannion</h2>
-        <p class="text-justify">Aujourd’hui, nous sommes implantés sur Rennes (locaux à Cesson-Sévigné) et Lannion (en espace de co-working pour l’instant).</p>
+        <p class="text-justify">Aujourd’hui, nous sommes implantés sur <b>Rennes</b> (locaux à Cesson-Sévigné) et <b>Lannion</b> (en espace de co-working pour l’instant).</p>
       </div>
     </div>
 
     <hr />
 
     <div class="row align-items-center dm-item">
-      <div class="col-8">
+      <div class="col-md-8 col-sm-12">
         <h2>Des clients majoritairement bretons</h2>
         <p class="text-justify">Nos clients sont majoritairement présents sur le territoire breton : Ille-et-Vilaine, Côtes d’Armor, Morbihan, Loire-Atlantique.</p>
         <p>Nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
       </div>
-      <div class="col-3 offset-1">
+      <div class="col-md-3 offset-md-1 col-sm-12">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
     </div>
 
     <hr />
 
-    <div class="row align-items-center dm-item">
-      <div class="col-3">
+    <div class="row align-items-center dm-item sm-reverse">
+      <div class="col-md-3 col-sm-12">
         <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
-      <div class="col-8 offset-1">
+      <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Soutien aux associations et réseaux locaux</h2>
-        <p>Aujourd’hui, nous sommes implantés sur Rennes (locaux à Cesson-Sévigné) et Lannion (en espace de co-working pour l’instant).</p>
         <ul class="arrow-list">
           <li><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
           <li><b>Professionnels</b> : ADN’Ouest</li>
@@ -151,11 +154,12 @@ order: 3
     </div>
 
     <div class="rse-item" id="social">
-      <div>
+      <div class="position-relative">
         <p class="title">Social</p>
+        <img class="circle" alt="" src="/assets/images/website/page-dm/rse/circle.svg" />
       </div>
 
-      <div class="d-flex justify-content-between rse-subitems">
+      <div class="rse-subitems">
         <p>Conditions de travail</p>
         <p>Partage des richesses</p>
         <p>Santé psychologique</p>
@@ -168,7 +172,7 @@ order: 3
         <p class="title mb-0 mr-3">Environnemental</p>
         <img class="leaf" alt="" src="/assets/images/website/page-dm/rse/leaf.svg" />
       </div>
-      <div class="d-flex justify-content-between rse-subitems">
+      <div class="rse-subitems">
         <p class="text-orange">Limitation des temps de trajets et de la circulation automobile</p>
         <p>Consommation vertueuse / tri</p>
         <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
@@ -180,7 +184,7 @@ order: 3
         <p class="title mb-0 mr-3">Sociétal</p>
         <img class="leaf" alt="" src="/assets/images/website/page-dm/rse/leaf.svg" />
       </div>
-      <div class="d-flex justify-content-between rse-subitems">
+      <div class="rse-subitems">
         <p>DEVmachine fait appel à l’ESAT Utopi</p>
         <p>DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
       </div>
