feat: contact page responsive

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@ permalink: /contact/
 title: Contact
 order: 4
 ---
-<section id="contact-intro">
+<section id="contact-intro" class="intro">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
@@ -18,35 +18,37 @@ order: 4
           </ul>
         </div>
       </div>
-      <div class="col-md-6 col-sm-12">
+
+      <div class="col-md-6 col-sm-12 right-img">
         <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
       </div>
+
     </div>
   </div>
 </section>
 
 <section id="contact-items">
   <div class="container">
-    <div class="row">
-      <div class="contact-item d-flex flex-column">
+    <div class="row contact-items-container">
+      <div class="contact-item">
         <img alt="" src="/assets/images/website/page-contact/linkedin.svg" />
-        <div>
+        <div class="contact-data">
           <p>4 Av. des Peupliers<br/>
           Bâtiment F - 1er étage<br/>
           <b>Cesson-Sévigné</b></p>
         </div>
       </div>
       
-      <div class="contact-item d-flex flex-column">
+      <div class="contact-item">
         <img alt="" src="/assets/images/website/page-contact/linkedin.svg" />
-        <div>
+        <div class="contact-data">
           <a class="text-orange" href="mailto:contact@devmachine.fr">contact@devmachine.fr</a>
         </div>
       </div>
       
-      <div class="contact-item d-flex flex-column">
+      <div class="contact-item">
         <img alt="" src="/assets/images/website/page-contact/linkedin.svg" />
-        <div>
+        <div class="contact-data">
           <a target="_blank" href="https://www.linkedin.com/company/devmachine/">@devmachine</a>
         </div>
       </div>
